--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@
     padding:0px;
 }
 body{
-    background-color: wheat;
+    background-color: #FDFD96;
 }
 h1#titulo_index{
     font-size: 48px;
@@ -18,11 +18,12 @@ h1#titulo_index{
 }
 h1#titulo_cadastro{
     text-align: center;
+    font-family: Ysabeau Office;
 }
 div#quadro_titulos_index{
     display: flex;
     justify-content:space-between;
-    background-color: rgba(0, 255, 255, 0.519);
+    background-color: #bafca2;
 
 }
 div#quadro_titulos_index>h2{
@@ -42,7 +43,7 @@ li{
     width: calc(100%/4);
     text-align: center;
     word-break: break-word;
-    background-color: rgba(128, 196, 255, 0.7);
+    background-color: #87ceeb;
     font-size: 25px;
     border: 2px solid black;
     font-family: 'Ubuntu', sans-serif;
@@ -60,17 +61,36 @@ a{
     color: black;
 }
 div#quadro_cadastro{
-    margin-top: 50px;
+    display: flex;
+    border: 2px solid black;
+    width: 400px;
+    margin: auto;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 16px 19px 12px 0px rgba(0, 0, 0, 0.75);
+}
+div#quadro_cadastro > form > button{
+    width: 300px;
+    position: relative;
+    display: block;
+    border-radius: 5px;
+    margin: 15px auto 0px auto;
+    height: 35px;
+    box-shadow: 6px 4px 0px 1px black;
+
 }
 input.cadastro{
-    width: calc(100% - 50px);
+    width: 390px;
     height: 35px;
-    border-radius: 15px;
-    margin-left: 60px;
-    
+    border-radius: 5px;
+    box-shadow: 4px 4px 0px 1px black;
+    margin: 5px 5px 5px 0px;
 }
 label.cadastro{
-    margin-top: 25px
+    font-family: 'Ubuntu', sans-serif;
+    font-size:26px;
+    margin:auto
 }
 fieldset{
     border: none;
