--- a/static/style.css
+++ b/static/style.css
@@ -51,14 +51,27 @@ li.lindex{
     word-break: break-word;
     font-size: 25px;
     font-family: 'Ubuntu', sans-serif;
-    line-height: 35px;
+    line-height: 40px;
     border: 2px solid black;
-    background-color: #87ceeb
+    background-color: #87ceeb;
+    height: 80px;
 }
-span.cu{
-    align-self: center;
+div.caixa{
+    display: flex;
+    width: calc(100%/4);
+    text-align: center;
+    word-break: break-word;
+    font-size: 25px;
+    font-family: 'Ubuntu', sans-serif;
+    line-height: 40px;
+    border: 2px solid black;
+    background-color: #87ceeb;
+    height: 80px;
 }
 
+div.sapato{
+    margin: auto;
+}
 
 div#quadro_ano_index{
     margin: 0px;
