--- a/templates/index.html
+++ b/templates/index.html
@@ -10,19 +10,18 @@
 <body>
     <h1 id="titulo_index"> Filmes catalogados</h1>
     <div id="quadro_titulos_index"><h2>Nome</h2><h2>Gênero</h2><h2>Diretor</h2><h2>Ano</h2><div id="gambiarra"></div></div>
-<ul>
+
     {%for item in lista%}
     <div id="elementos_index">
-        <li id="nome"class="lindex"><span class="cu">{{item.nome}}</span></li>
-        <li id="genero"class="lindex"><span class="cu">{{item.gênero}}</span></li>
-        <li id="diretor"class="lindex"><span class="cu">{{item.diretor}}</span></li>
-        <li id="ano" class="lindex"><span class="cu">{{item.ano}}</span></li>
+        <div class="caixa"><div class="sapato">{{item.nome}}</div></div>
+        <div class="caixa"><div class="sapato">{{item.gênero}}</div></div>
+        <div class="caixa"><div class="sapato">{{item.diretor}}</div></div>
+        <div class="caixa"><div class="sapato">{{item.ano}}</div></div>
         <div id="vertical">
                 <a href="{{url_for('editar', nome=item.nome)}}" id="editar">editar</a>
         </div>
     </div>
     {%endfor%}
-</ul>
     <h1 id="subtitulo"><a href="/cadastro" id="new_move">Cadastrar novo filme</a></h1>
 </body>
 </html>
