link com banco de dados hospedado em railway.com
mto pica

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     {%for item in lista%}
     <div id="elementos_index">
         <div class="caixa"><div class="sapato">{{item.nome}}</div></div>
-        <div class="caixa"><div class="sapato">{{item.gênero}}</div></div>
+        <div class="caixa"><div class="sapato">{{item.genero}}</div></div>
         <div class="caixa"><div class="sapato">{{item.diretor}}</div></div>
         <div class="caixa"><div class="sapato">{{item.ano}}</div></div>
         <div id="vertical">
